fix: resolve compilation errors and add missing imports/methods
Add missing imports, methods, and complete kit rules editor
Add arena regeneration toggle and async operations

#VERCEL_SKIP

Co-authored-by: null <223951330+Kyssta79@users.noreply.github.com>